added average discount feature

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19733,7 +19733,7 @@
     "        # Display the legend\n",
     "        plt.legend(loc='upper left')\n",
     "\n",
-    "        # Save every 10th plot for visual analyzation, Comment this out to not be flooded with .jpegs\n",
+    "        # Save every 100th plot for visual analyzation, Comment this out to not be flooded with .jpegs\n",
     "        if(counter%100 == 0):\n",
     "            print(\"Saved Graph\",str(appid))\n",
     "            plt.savefig(\"data/Graphs/PlayerCountVsPrice/\" + str(appid) + \".jpeg\")\n",
@@ -19754,7 +19754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this cell I am going to create and add new possibly useful features to our datasets (total # times gone on sale, average discount %, seasonality of discounts, etc)"
+    "In this cell I am going to create and add new possibly useful features to our datasets (total # times gone on sale, average discount %, seasonality of discounts, etc) that we may want to use in our model"
    ]
   },
   {
