actually add average discount feature

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2108,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -19759,7 +19759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -19779,28 +19779,42 @@
       "1737  429050  game             Feed and Grow: Fish    8-Jan-16   \n",
       "1738  304730  game                     Train Fever    4-Sep-14   \n",
       "\n",
-      "              developer                    publisher  numberofsales  \n",
-      "0      PUBG Corporation             PUBG Corporation              9  \n",
-      "3      Ubisoft Montreal                      Ubisoft             11  \n",
-      "4        Rockstar North               Rockstar Games             13  \n",
-      "8         Psyonix, Inc.                Psyonix, Inc.              8  \n",
-      "9     Facepunch Studios            Facepunch Studios              8  \n",
-      "...                 ...                          ...            ...  \n",
-      "1732        Nuked Games                  !Lim studio              4  \n",
-      "1733    PixelTail Games              PixelTail Games              9  \n",
-      "1734    Sauropod Studio              Sauropod Studio             10  \n",
-      "1737          Old B1ood                Greens s.r.o.              1  \n",
-      "1738        Urban Games  Good Shepherd Entertainment              8  \n",
+      "              developer                    publisher  numberofsales  \\\n",
+      "0      PUBG Corporation             PUBG Corporation              9   \n",
+      "3      Ubisoft Montreal                      Ubisoft             11   \n",
+      "4        Rockstar North               Rockstar Games             13   \n",
+      "8         Psyonix, Inc.                Psyonix, Inc.              8   \n",
+      "9     Facepunch Studios            Facepunch Studios              8   \n",
+      "...                 ...                          ...            ...   \n",
+      "1732        Nuked Games                  !Lim studio              4   \n",
+      "1733    PixelTail Games              PixelTail Games              9   \n",
+      "1734    Sauropod Studio              Sauropod Studio             10   \n",
+      "1737          Old B1ood                Greens s.r.o.              1   \n",
+      "1738        Urban Games  Good Shepherd Entertainment              8   \n",
       "\n",
-      "[1247 rows x 7 columns]\n"
+      "      averagediscount  \n",
+      "0            8.113590  \n",
+      "3           14.602434  \n",
+      "4           13.691684  \n",
+      "8            9.269777  \n",
+      "9            6.535497  \n",
+      "...               ...  \n",
+      "1732        10.155844  \n",
+      "1733         6.653144  \n",
+      "1734         9.452333  \n",
+      "1737         0.730223  \n",
+      "1738        10.000000  \n",
+      "\n",
+      "[1247 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
     "#not worried abt free to play\n",
-    "#appMergedInfo.drop(columns=['freetoplay'], inplace=True)\n",
+    "appMergedInfo.drop(columns=['freetoplay'], inplace=True)\n",
     "#add new columns and initalize them\n",
     "appMergedInfo['numberofsales'] = -1\n",
+    "appMergedInfo['averagediscount'] = -1\n",
     "\n",
     "#function to get total sales (consecutive days of sales count as 1 'sale')\n",
     "def get_total_sales(priceData):\n",
@@ -19817,6 +19831,18 @@
     "            onSale = False\n",
     "\n",
     "    return saleCount\n",
+    "\n",
+    "#function to get average discount percentage\n",
+    "def get_average_discount(priceData):\n",
+    "    n = 0\n",
+    "    sum = 0\n",
+    "\n",
+    "    for i in range(len(priceData)):\n",
+    "        n += 1\n",
+    "        if priceData['Discount'][i] != 0:\n",
+    "            sum += priceData['Discount'][i]\n",
+    "    avg = sum/n\n",
+    "    return avg\n",
     "    \n",
     "#go through each appid, use it to index into price/playercount history and generate new features to add to appMergedInfo\n",
     "for appid in appMergedInfo['appid']:\n",
@@ -19831,8 +19857,10 @@
     "        priceData = pd.read_csv(priceDir)\n",
     "        #get new feature values\n",
     "        totalSales = get_total_sales(priceData)\n",
+    "        averageDiscount = get_average_discount(priceData)\n",
     "        #assign new feature values\n",
     "        appMergedInfo.loc[appMergedInfo['appid'] == appid, 'numberofsales'] = totalSales\n",
+    "        appMergedInfo.loc[appMergedInfo['appid'] == appid, 'averagediscount'] = averageDiscount\n",
     "    \n",
     "print(appMergedInfo)"
    ]
