Remove old graphs before generating new ones

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -19693,6 +19693,15 @@
     }
    ],
    "source": [
+    "def delete_files_with_extension(directory, extension):\n",
+    "    for filename in os.listdir(directory):\n",
+    "        if filename.endswith(extension):\n",
+    "            file_path = os.path.join(directory, filename)\n",
+    "            os.remove(file_path)\n",
+    "            print(f\"Deleted: {file_path}\")\n",
+    "\n",
+    "delete_files_with_extension(\"data/Graphs/\",\".jpeg\")\n",
+    "\n",
     "counter = 0\n",
     "\n",
     "#directories\n",
@@ -19741,13 +19750,7 @@
     "        else:\n",
     "            plt.close()\n",
     "\n",
-    "        counter = counter + 1\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
+    "        counter = counter + 1"
    ]
   },
   {
@@ -19759,7 +19762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -19882,7 +19885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
