Run decision trees with multiple depths

--- a/all_models.ipynb
+++ b/all_models.ipynb
@@ -11,39 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          Date  Playercount  Initialprice\n",
-      "328 2020-02-29        10612          9.99\n",
-      "329 2020-03-01        10648          9.99\n",
-      "330 2020-03-02         9096          9.99\n",
-      "331 2020-03-03         8934          9.99\n",
-      "332 2020-03-04         8837          9.99\n",
-      "..         ...          ...           ...\n",
-      "488 2020-08-08        10939          9.99\n",
-      "489 2020-08-09        11414          9.99\n",
-      "490 2020-08-10        10516          9.99\n",
-      "491 2020-08-11        10571          9.99\n",
-      "492 2020-08-12        10287          9.99\n",
+      "         appid       Date  Playercount  Initialprice  Finalprice  Discount  \\\n",
+      "0       614570 2019-04-07          103         29.99       29.99         0   \n",
+      "1       614570 2019-04-08           71         29.99       29.99         0   \n",
+      "2       614570 2019-04-09           67         29.99       29.99         0   \n",
+      "3       614570 2019-04-10           58         29.99       29.99         0   \n",
+      "4       614570 2019-04-11           55         29.99       29.99         0   \n",
+      "...        ...        ...          ...           ...         ...       ...   \n",
+      "597477  228280 2020-08-08          622         19.99       19.99         0   \n",
+      "597478  228280 2020-08-09          688         19.99       19.99         0   \n",
+      "597479  228280 2020-08-10          558         19.99       19.99         0   \n",
+      "597480  228280 2020-08-11          529         19.99       19.99         0   \n",
+      "597481  228280 2020-08-12          520         19.99       19.99         0   \n",
       "\n",
-      "[165 rows x 3 columns]\n",
-      "328    0\n",
-      "329    0\n",
-      "330    0\n",
-      "331    0\n",
-      "332    0\n",
-      "      ..\n",
-      "488    0\n",
-      "489    0\n",
-      "490    0\n",
-      "491    0\n",
-      "492    0\n",
-      "Name: Discount, Length: 165, dtype: int64\n"
+      "        name releasedate  developer  publisher  \n",
+      "0        273  2017-09-14         50         70  \n",
+      "1        273  2017-09-14         50         70  \n",
+      "2        273  2017-09-14         50         70  \n",
+      "3        273  2017-09-14         50         70  \n",
+      "4        273  2017-09-14         50         70  \n",
+      "...      ...         ...        ...        ...  \n",
+      "597477    71  2013-01-16         79         65  \n",
+      "597478    71  2013-01-16         79         65  \n",
+      "597479    71  2013-01-16         79         65  \n",
+      "597480    71  2013-01-16         79         65  \n",
+      "597481    71  2013-01-16         79         65  \n",
+      "\n",
+      "[596003 rows x 10 columns]\n"
      ]
     }
    ],
@@ -64,25 +65,112 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.datasets import load_iris, load_wine, load_digits, load_breast_cancer, load_diabetes\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# placeholder for when we actually have data we want to use\n",
-    "sample_df = pd.read_csv('data/CombinedPricePlayerCountHistory/10.csv',encoding='utf-8')\n",
+    "folder = \"data/CombinedPricePlayerCountHistory\"\n",
+    "game_dfs = []\n",
     "\n",
+    "for filename in os.listdir(folder):\n",
+    "    if filename == \"readme.md\":\n",
+    "        continue\n",
+    "\n",
+    "    # Construct filenames\n",
+    "    fullpath = os.path.join(folder, filename)\n",
+    "    appId, garbage_collector = os.path.splitext(filename)\n",
+    "\n",
+    "    # Create data frame for each csv\n",
+    "    df = pd.read_csv(fullpath)\n",
+    "    df['appid'] = appId\n",
+    "    # Put appid first for visual pleasure\n",
+    "    cols = ['appid'] + [col for col in df if col != 'appid']\n",
+    "    df = df[cols]\n",
+    "    game_dfs.append(df)\n",
+    "\n",
+    "# Combine them into one csv we can use to train\n",
+    "combined_df = pd.concat(game_dfs, ignore_index=True)\n",
+    "\n",
+    "#pull in the rest of our merged info\n",
+    "merged_info_df = pd.read_csv(\"merged_info.csv\")\n",
+    "\n",
+    "#format combined_df\n",
+    "combined_df['appid'] = combined_df['appid'].astype('int64')\n",
+    "combined_df['Date'] = pd.to_datetime(combined_df['Date'])\n",
+    "\n",
+    "#merge combined_df and merged_info_df\n",
+    "full_df = combined_df.merge(merged_info_df,on='appid')\n",
+    "\n",
+    "#drop redundant columns\n",
+    "full_df = full_df.drop('type', axis=1)\n",
+    "full_df = full_df.drop('freetoplay', axis=1)\n",
+    "\n",
+    "#format dates, drop ones that do not follow format\n",
+    "full_df['releasedate'] = pd.to_datetime(full_df['releasedate'], format='%d-%b-%y',errors='coerce')\n",
+    "full_df = full_df.dropna(subset=['releasedate'])\n",
+    "\n",
+    "#numerically encode string columns (name, dev, pub)\n",
+    "label_encoder = LabelEncoder()\n",
+    "full_df['name'] = label_encoder.fit_transform(full_df['name'])\n",
+    "full_df['developer'] = label_encoder.fit_transform(full_df['developer'])\n",
+    "full_df['publisher'] = label_encoder.fit_transform(full_df['publisher'])\n",
+    "\n",
+    "#to check\n",
+    "print(full_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Date  Playercount  Initialprice\n",
+      "183    2019-10-08           88         29.99\n",
+      "184    2019-10-09           87         29.99\n",
+      "185    2019-10-10           75         29.99\n",
+      "186    2019-10-11           89         29.99\n",
+      "187    2019-10-12          117         29.99\n",
+      "...           ...          ...           ...\n",
+      "597477 2020-08-08          622         19.99\n",
+      "597478 2020-08-09          688         19.99\n",
+      "597479 2020-08-10          558         19.99\n",
+      "597480 2020-08-11          529         19.99\n",
+      "597481 2020-08-12          520         19.99\n",
+      "\n",
+      "[371315 rows x 3 columns]\n",
+      "183       0\n",
+      "184       0\n",
+      "185       0\n",
+      "186       0\n",
+      "187       0\n",
+      "         ..\n",
+      "597477    0\n",
+      "597478    0\n",
+      "597479    0\n",
+      "597480    0\n",
+      "597481    0\n",
+      "Name: Discount, Length: 371315, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
     "#read in csv, convert date column to datetime object\n",
-    "sample_df['Date'] = pd.to_datetime(sample_df['Date'])\n",
+    "full_df['Date'] = pd.to_datetime(full_df['Date'])\n",
     "\n",
     "#2/3 samples train/test split\n",
-    "samples = len(sample_df)\n",
+    "samples = len(full_df)\n",
     "split = math.floor(samples * (2/3))\n",
     "\n",
     "#split at date 2/3 of the way through entry by using \"split\" to index into the df, get the date, and use that\n",
-    "split_date = sample_df.iloc[split]['Date']\n",
+    "split_date = full_df.iloc[split]['Date']\n",
     "split_date = pd.to_datetime(split_date)\n",
-    "train_data = sample_df[sample_df['Date'] < split_date]\n",
-    "test_data = sample_df[sample_df['Date'] >= split_date]\n",
+    "train_data = full_df[full_df['Date'] < split_date]\n",
+    "test_data = full_df[full_df['Date'] >= split_date]\n",
     "\n",
     "#Considering 'Finalprice' spoils whether or not there is a discount/it's amount so we omit that feature\n",
     "#Set up training data\n",
@@ -118,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,43 +214,33 @@
      "output_type": "stream",
      "text": [
       "Name: Nearest Neighbors\n",
-      "Training: 0.9115853658536586\n",
-      "Testing: 0.9151515151515152\n",
-      "\n",
-      "\n",
-      "Name: Linear SVM\n",
-      "Training: 0.9024390243902439\n",
-      "Testing: 0.30303030303030304\n",
-      "\n",
-      "\n",
-      "Name: RBF SVM\n",
-      "Training: 1.0\n",
-      "Testing: 0.9151515151515152\n",
+      "Training: 0.8757922096418145\n",
+      "Testing: 0.8103119992459232\n",
       "\n",
       "\n",
       "Name: Decision Tree\n",
-      "Training: 0.9451219512195121\n",
-      "Testing: 0.5636363636363636\n",
+      "Training: 0.8720091860713522\n",
+      "Testing: 0.8222641153737392\n",
       "\n",
       "\n",
       "Name: Random Forest\n",
-      "Training: 0.9298780487804879\n",
-      "Testing: 0.9151515151515152\n",
+      "Training: 0.8718267108167771\n",
+      "Testing: 0.8226573125244065\n",
       "\n",
       "\n",
       "Name: Neural Net\n",
-      "Training: 0.8932926829268293\n",
-      "Testing: 0.9151515151515152\n",
+      "Training: 0.8718267108167771\n",
+      "Testing: 0.8226573125244065\n",
       "\n",
       "\n",
       "Name: AdaBoost\n",
-      "Training: 0.9451219512195121\n",
-      "Testing: 0.6545454545454545\n",
+      "Training: 0.8264571316670227\n",
+      "Testing: 0.7832433378667708\n",
       "\n",
       "\n",
       "Name: Naive Bayes\n",
-      "Training: 0.9115853658536586\n",
-      "Testing: 0.9151515151515152\n",
+      "Training: 0.6260770490635904\n",
+      "Testing: 0.6491334850463892\n",
       "\n",
       "\n"
      ]
@@ -171,8 +249,8 @@
    "source": [
     "names = [\n",
     "    \"Nearest Neighbors\",\n",
-    "    \"Linear SVM\",\n",
-    "    \"RBF SVM\",\n",
+    "    # \"Linear SVM\",\n",
+    "    # \"RBF SVM\",\n",
     "    \"Decision Tree\",\n",
     "    \"Random Forest\",\n",
     "    \"Neural Net\",\n",
@@ -182,8 +260,8 @@
     "\n",
     "classifiers = [\n",
     "    KNeighborsClassifier(3),\n",
-    "    SVC(kernel=\"linear\", C=0.025),\n",
-    "    SVC(gamma=2, C=1),\n",
+    "    # SVC(kernel=\"linear\", C=0.025),\n",
+    "    # SVC(gamma=2, C=1),\n",
     "    DecisionTreeClassifier(max_depth=5),\n",
     "    RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
     "    MLPClassifier(alpha=1, max_iter=1000),\n",
@@ -205,6 +283,113 @@
     "    print(\"Training:\", train_acc)\n",
     "    print(\"Testing:\", test_acc)\n",
     "    print(\"\\n\")   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We saw that a decision tree, random forest, and neural net all had pretty good accuracies. First we will hyper parameters on decision trees to see if we can get better results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Trees\n",
+      "Depth: 1\n",
+      "Training: 0.8718267108167771\n",
+      "Testing: 0.8226573125244065\n",
+      "\n",
+      "\n",
+      "Depth: 2\n",
+      "Training: 0.8718267108167771\n",
+      "Testing: 0.8226573125244065\n",
+      "\n",
+      "\n",
+      "Depth: 3\n",
+      "Training: 0.8718267108167771\n",
+      "Testing: 0.8226573125244065\n",
+      "\n",
+      "\n",
+      "Depth: 4\n",
+      "Training: 0.8719468774478388\n",
+      "Testing: 0.8226734713114202\n",
+      "\n",
+      "\n",
+      "Depth: 5\n",
+      "Training: 0.8720091860713522\n",
+      "Testing: 0.8222641153737392\n",
+      "\n",
+      "\n",
+      "Depth: 10\n",
+      "Training: 0.873090685750908\n",
+      "Testing: 0.8210495132165412\n",
+      "\n",
+      "\n",
+      "Depth: 15\n",
+      "Training: 0.8780397707042654\n",
+      "Testing: 0.8168455354618047\n",
+      "\n",
+      "\n",
+      "Depth: 20\n",
+      "Training: 0.89140497044791\n",
+      "Testing: 0.8036357270780874\n",
+      "\n",
+      "\n",
+      "Depth: 30\n",
+      "Training: 0.9231022573524176\n",
+      "Testing: 0.7765428275184143\n",
+      "\n",
+      "\n",
+      "Depth: 40\n",
+      "Training: 0.927067756177455\n",
+      "Testing: 0.7745633761092334\n",
+      "\n",
+      "\n",
+      "Depth: 50\n",
+      "Training: 0.9271701203446557\n",
+      "Testing: 0.7744394920754616\n",
+      "\n",
+      "\n",
+      "Depth: 100\n",
+      "Training: 0.9271701203446557\n",
+      "Testing: 0.7744825821741648\n",
+      "\n",
+      "\n",
+      "Best Depth: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "depths = [1, 2, 3, 4, 5, 10, 15, 20, 30, 40, 50, 100]\n",
+    "scores = {}\n",
+    "dt_scores = {}\n",
+    "\n",
+    "print(\"Decision Trees\")\n",
+    "for depth in depths:\n",
+    "    clf = DecisionTreeClassifier(max_depth=depth)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    y_predict = clf.predict(X_train)\n",
+    "    train_acc = accuracy_score(y_train, y_predict)\n",
+    "\n",
+    "    y_predict = clf.predict(X_test)\n",
+    "    test_acc = accuracy_score(y_test, y_predict)\n",
+    "\n",
+    "    dt_scores[depth] = test_acc\n",
+    "\n",
+    "    print(\"Depth:\", depth)\n",
+    "    print(\"Training:\", train_acc)\n",
+    "    print(\"Testing:\", test_acc)\n",
+    "    print(\"\\n\")   \n",
+    "\n",
+    "print(\"Best Depth:\", max(dt_scores, key=lambda k: dt_scores[k]))\n",
+    "    "
    ]
   }
  ],
