Create csv with only sale start dates

--- a/merge_sale_dates.ipynb
+++ b/merge_sale_dates.ipynb
@@ -33,11 +33,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code will keep track of when a sale starts and update any days _after_ it starts to not include a sale. Essentially we are just taking the day the sale starts. We also want to make sure that we ensure its the same game since one game could have data that ends with a sale and the next one in the df could start with a sale, we do not want that to be considered the same sale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkForSale(row, foundSale, full_df, index):\n",
+    "    if row['onSale'] == 1 and foundSale == False:\n",
+    "        foundSale = True\n",
+    "    elif row['onSale'] == 1 and foundSale == True:\n",
+    "        full_df.loc[index, 'onSale'] = 0\n",
+    "        full_df.loc[index, 'Discount'] = 0\n",
+    "        full_df.loc[index, 'Finalprice'] = row['Initialprice']\n",
+    "    elif row['onSale'] == 0:\n",
+    "        foundSale = False\n",
+    "\n",
+    "    return foundSale, full_df\n",
+    "\n",
+    "foundSale = False\n",
+    "previousId = 10\n",
+    "\n",
+    "for index, row in full_df.iterrows():\n",
+    "    if row['appid'] == previousId:\n",
+    "        foundSale, full_df = checkForSale(row, foundSale, full_df, index)\n",
+    "    else:\n",
+    "        previousId = row['appid']\n",
+    "        foundSale = False\n",
+    "        foundSale, full_df = checkForSale(row, foundSale, full_df, index)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "full_df.to_csv('all_data_sale_start_only.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
